# text2sql

./: .gitignore  README.md  main.py  pyproject.toml
src/: config.py  logging.py  main.py  utils.py
src/component/: execute_sql.py  fix_sql.py  gen_sql.py  pseudo_schema.py  pseudo_sql.py  schema_retrieval.py  validate_sql.py
src/db/: client.py  service.py
src/embedding/: model.py
src/llm/: client.py  prompt.py
src/node/: fix_sql.py  gen_sql.py  pseudo_schema.py  pseudo_sql.py  schema_retrieval.py  validate_sql.py
src/notebooks/: qdrant.ipynb  relationships.json  schemas.json  schemas.txt  test.ipynb
src/schema/: output_schema.py  state_schema.py
src/test/integration/: test_full_pipeline.py
src/test/unit/: test_chema_retrieval.py  test_execute_sql.py  test_fix_sql.py  test_gen_sql.py  test_pseudo_schema.py  test_pseudo_sql.py  test_validate_sql.py
src/vectordb/: client.py  service.py
src/workflow/: graph.py  node.py
