[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flagembedding>=1.3.5",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
]
