[project]
name = "text2sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.8.2",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "flagembedding>=1.3.5",
    "gradio>=5.47.2",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-ollama>=0.3.8",
    "langchain-together>=0.3.1",
    "langgraph>=0.6.8",
    "ollama>=0.6.0",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pygraphviz>=1.14",
    "pytest>=8.4.2",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.43",
]
